# ptr-eq-test

./: Makefile  README.md  ptr-eq-test.cabal
dumps/8.0.2/: Main.dump-cmm  Main.dump-hi  Main.dump-simpl  Main.dump-stg
dumps/8.2.1/: Main.dump-cmm  Main.dump-hi  Main.dump-simpl  Main.dump-stg
src/: Main.hs
